fix deprecation warnings
These APIs will no longer be available in later Java versions. Fixes 6 build
warnings.